# duckdb-ndk

./: build.gradle  settings.gradle
.github/workflows/: release.yaml
app/: build.gradle
app/src/androidTest/java/solutions/doto/duckdb_ndk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/solutions/doto/duckdb_ndk/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/solutions/doto/duckdb_ndk/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
